BStoneHtml/banner.css
#bannerFullsize{
	height: 100vh;
	margin: 0; padding: 0;
	position: relative;
	z-index: 0;
}

    #bannerAnimation {
        height: 100vh;
        width: 100vw;

        position: absolute;
            top: 0;
            bottom: 0;
            left: 0;
            right: 0;
        z-index:0;
        
        display: block;
        background-color: #D8D8D8;
    }

            #animatedlogo{
                position: fixed;
                top: 374px;
                left: 50%;
                margin-left: -255px;

                z-index: 2;
                fill: #ffffff;

                overflow: visible;
                width: 510px;

                -webkit-animation: changeLogos 1s ease-in-out 5s forwards;
                -moz-animation: changeLogos 1s ease-in-out 5s forwards;
                -o-animation: changeLogos 1s ease-in-out 5s forwards;
                animation: changeLogos 1s ease-in-out 5s forwards;
            }

                #animatedlogo #B{
                    transform: translateX(18%);
                    opacity: 0;
                    -webkit-animation: myanimation1 3s 1s ease-in-out forwards;
                    -moz-animation: myanimation1 3s 1s ease-in-out forwards;
                    -o-animation: myanimation1 3s 1s ease-in-out forwards;
                    animation: myanimation1 3s 1s ease-in-out forwards;
                }

                #animatedlogo #Stone{
                    transform: translateX(50%);
                    opacity: 0;
                    -webkit-animation: myanimation2 3s 1s ease-in-out forwards;
                    -moz-animation: myanimation2 3s 1s ease-in-out forwards;
                    -o-animation: myanimation2 3s 1s ease-in-out forwards;
                    animation: myanimation2 3s 1s ease-in-out forwards;
                }


                #animatedlogo #Rreferencias{
                    transform: translateX(-50%);
                    opacity: 0;
                    -webkit-animation: myanimation3 3s 1s ease-in-out forwards;
                    -moz-animation: myanimation3 3s 1s ease-in-out forwards;
                    -o-animation: myanimation3 3s 1s ease-in-out forwards;
                    animation: myanimation3 3s 1s ease-in-out forwards;
                }


    
	#bannerImage{
        -webkit-animation: changeLogos2 2s 6s cubic-bezier(0, .5, 0, 1) forwards;
		-moz-animation: changeLogos2 2s 6s cubic-bezier(0, .5, 0, 1) forwards;
		-o-animation: changeLogos2 2s 6s cubic-bezier(0, .5, 0, 1) forwards;
        animation: changeLogos2 2s 6s cubic-bezier(0, .5, 0, 1) forwards;
        
		width: 100vw;
		height: 100vh;
		position: relative;
		z-index: 2;

		background: url(assets/images/BlocoB-7234_Banner.jpg) no-repeat; 

		-webkit-background-size: cover;
		-moz-background-size: cover;
		-o-background-size: cover;
		background-size: cover;

		background-position: center center;

        opacity: 0;
	}


        #bannerImage::before{
            -webkit-animation: changeLogos2 .3s 6.2s cubic-bezier(0, .5, 0, 1) forwards;
            -moz-animation: changeLogos2 .3s 6.2s cubic-bezier(0, .5, 0, 1) forwards;
            -o-animation: changeLogos2 .3s 6.2s cubic-bezier(0, .5, 0, 1) forwards;
            animation: changeLogos2 .3s 6.2s cubic-bezier(0, .5, 0, 1) forwards;
            
            display: block;
            content: '';
            position: absolute;
                top: 0;
                bottom: 0;
                left: 0;
                right: 0;
            z-index: 3;
            
            width: 100%;
            height: 100%;

            background: rgba(0, 0, 0, 0.15);
            opacity: 0;
        }
        
        #bannerImage::after{
            -webkit-animation: changeLogos2 .3s ease-in-out 6.6s forwards;
            -moz-animation: changeLogos2 .3s ease-in-out 6.6s forwards;
            -o-animation: changeLogos2 .3s ease-in-out 6.6s forwards;
            animation: changeLogos2 .3s ease-in-out 6.6s forwards;
            
            content: '';
            position: absolute;
                top: 0;
                bottom: 0;
                left: 0;
                right: 0;
            z-index: 3;

            width: 100%;
            height: 100%;
            
            background: url(assets/intro_logo.svg) no-repeat fixed;

            -webkit-background-size: 510px;
            -moz-background-size: 510px;
            -o-background-size: 510px;
            background-size: 510px;

            background-position: center center;
            opacity: 0;

            -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 46% 80%, 21% 100%, 0 100%);
            -o-clip-path: polygon(0 0, 100% 0, 100% 80%, 46% 80%, 21% 100%, 0 100%);
            -ms-clip-path: polygon(0 0, 100% 0, 100% 80%, 46% 80%, 21% 100%, 0 100%);
            clip-path: polygon(0 0, 100% 0, 100% 80%, 46% 80%, 21% 100%, 0 100%);
        }

	
        /* #bannerAnimation #logo{
            position: fixed;
            top: 50%;
            left: 50%;
            display:block;
            
            z-index:2;
            -webkit-clip-path: url("#myMask"); 
            clip-path: url("#myMask");    
        }
        
        #svgMask{
            position: absolute;
            bottom: 0;
            left: 0;
            right: 0;
            z-index: 2;
            fill-opacity: 50%; 
        }*/

	


	.line{
		position: fixed;
        background: rgba(240, 240, 240, 0.4);
        z-index: 4;
        display: block;
        opacity: 0;
	}

		.horizontalLine{
            top: 0;
            left:0;
            right: 0;

			width: 100%;
			height: 1px;
			animation: horizontalLineAnim 2s ease-in-out 7s forwards;
		}
		.verticalLeftLine{
            top:0;
            bottom: 0;
            left: 0;
            
			width: 1px;
			height: 100vh;
			animation: verticalLineAnim 2s ease-in-out 7s forwards;
		}
		.verticalRightLine{
            top:0;
            bottom: 0;
            right: 0;
            
			width: 1px;
			height: 100vh;
			animation: verticalLineAnim2 2s ease-in-out 6s forwards;
		}

